--- a/app/src/main/res/layout/activity_du_har_tabt.xml
+++ b/app/src/main/res/layout/activity_du_har_tabt.xml
@@ -20,8 +20,9 @@
         android:id="@+id/return_tabt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="293dp"
-        android:text="Tryk her for at vende tilbage til startsiden"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="400dp"
+        android:text="Tilbage til start"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
