--- a/app/src/main/res/layout/activity_nyt_spil.xml
+++ b/app/src/main/res/layout/activity_nyt_spil.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:layout_marginEnd="171dp"
+        android:layout_marginEnd="170dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Word"
@@ -53,11 +53,12 @@
         android:id="@+id/reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginBottom="69dp"
+        android:layout_marginEnd="3dp"
         android:text="Reset"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/gallowStart" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/saveCurrentGameState"
+        app:layout_constraintEnd_toStartOf="@+id/saveCurrentGameState"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/userInput"
@@ -69,5 +70,16 @@
         android:text="Input"
         app:layout_constraintStart_toStartOf="@+id/wordToGuess"
         app:layout_constraintTop_toBottomOf="@+id/wordToGuess" />
+
+    <Button
+        android:id="@+id/saveCurrentGameState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="77dp"
+        android:text="Save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/reset" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
