--- a/app/src/main/res/layout/activity_nyt_spil.xml
+++ b/app/src/main/res/layout/activity_nyt_spil.xml
@@ -10,20 +10,20 @@
         android:id="@+id/wordToGuess"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="116dp"
+        android:layout_marginBottom="22dp"
         android:ems="10"
         android:inputType="none"
         android:text="Word"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/userInput"
+        app:layout_constraintStart_toStartOf="@+id/userInput" />
 
     <ImageView
         android:id="@+id/gallowStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        app:layout_constraintEnd_toEndOf="@+id/saveCurrentGameState"
+        android:layout_marginTop="23dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lettersUsed"
         app:srcCompat="@drawable/galge" />
 
@@ -31,39 +31,29 @@
         android:id="@+id/userInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="157dp"
+        android:layout_marginEnd="77dp"
         android:ems="10"
         android:inputType="textShortMessage"
         android:text="Input"
-        app:layout_constraintStart_toStartOf="@+id/wordToGuess"
-        app:layout_constraintTop_toBottomOf="@+id/wordToGuess" />
-
-    <Button
-        android:id="@+id/saveCurrentGameState"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="7dp"
-        android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/reset"
-        app:layout_constraintTop_toBottomOf="@+id/gallowStart" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="8dp"
         android:text="Reset"
-        app:layout_constraintBaseline_toBaselineOf="@+id/saveCurrentGameState"
-        app:layout_constraintEnd_toStartOf="@+id/saveCurrentGameState"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/gallowStart"
+        app:layout_constraintTop_toBottomOf="@+id/guessLetter" />
 
     <TextView
         android:id="@+id/lettersUsed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="none"
         android:text="Used letters"
@@ -79,5 +69,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/guessLetter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gæt"
+        app:layout_constraintStart_toStartOf="@+id/reset"
+        app:layout_constraintTop_toBottomOf="@+id/gallowStart" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
