--- a/app/src/main/res/layout/activity_nyt_spil.xml
+++ b/app/src/main/res/layout/activity_nyt_spil.xml
@@ -10,20 +10,21 @@
         android:id="@+id/wordToGuess"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="22dp"
+        android:layout_marginTop="25dp"
         android:ems="10"
         android:inputType="none"
         android:text="Word"
-        app:layout_constraintBottom_toTopOf="@+id/userInput"
-        app:layout_constraintStart_toStartOf="@+id/userInput" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userName" />
 
     <ImageView
         android:id="@+id/gallowStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="17dp"
+        app:layout_constraintStart_toStartOf="@+id/lettersUsed"
         app:layout_constraintTop_toBottomOf="@+id/lettersUsed"
         app:srcCompat="@drawable/galge" />
 
@@ -31,29 +32,27 @@
         android:id="@+id/userInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="157dp"
-        android:layout_marginEnd="77dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="textShortMessage"
         android:text="Input"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/wordToGuess"
+        app:layout_constraintTop_toBottomOf="@+id/wordToGuess" />
 
     <Button
         android:id="@+id/reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:text="Reset"
-        app:layout_constraintStart_toStartOf="@+id/gallowStart"
+        app:layout_constraintStart_toStartOf="@+id/guessLetter"
         app:layout_constraintTop_toBottomOf="@+id/guessLetter" />
 
     <TextView
         android:id="@+id/lettersUsed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="11dp"
         android:ems="10"
         android:inputType="none"
         android:text="Used letters"
@@ -65,17 +64,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
+        android:layout_marginEnd="15dp"
         android:text="'s Hangman Game"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/wordToGuess"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/guessLetter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="40dp"
         android:text="Gæt"
-        app:layout_constraintStart_toStartOf="@+id/reset"
+        app:layout_constraintEnd_toEndOf="@+id/gallowStart"
         app:layout_constraintTop_toBottomOf="@+id/gallowStart" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
