--- a/app/src/main/res/layout/activity_nyt_spil.xml
+++ b/app/src/main/res/layout/activity_nyt_spil.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -35,7 +36,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="textShortMessage"
-        android:text="Input"
+        android:text="input"
         app:layout_constraintStart_toStartOf="@+id/wordToGuess"
         app:layout_constraintTop_toBottomOf="@+id/wordToGuess" />
 
