--- a/app/src/main/res/layout/activity_choose_username_frag.xml
+++ b/app/src/main/res/layout/activity_choose_username_frag.xml
@@ -6,4 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".ChooseUsername_frag">
 
+    <TextView
+        android:id="@+id/brugerNavn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="142dp"
+        android:layout_marginTop="198dp"
+        android:text="Skriv dit navn her"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/saveContinue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gem og forsæt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
