--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,16 @@
     android:elevation="5dp"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/highScoreknap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="18dp"
+        android:text="Tryk her for at se highscore"
+        app:layout_constraintStart_toStartOf="@+id/knap"
+        app:layout_constraintTop_toBottomOf="@+id/knap" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
