--- a/app/src/main/res/layout/activity_du_har_tabt.xml
+++ b/app/src/main/res/layout/activity_du_har_tabt.xml
@@ -10,8 +10,8 @@
         android:id="@+id/tabt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginStart="168dp"
+        android:layout_marginTop="124dp"
         android:text="Du har tabt"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,9 +20,19 @@
         android:id="@+id/return_tabt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="400dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="372dp"
         android:text="Tilbage til start"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/ordetVarTabt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="71dp"
+        android:text="Ordet var:"
+        app:layout_constraintBottom_toTopOf="@+id/return_tabt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
