--- a/app/src/main/res/layout/activity_du_har_tabt.xml
+++ b/app/src/main/res/layout/activity_du_har_tabt.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DuHarTabt">
+    tools:context=".Views.DuHarTabt">
 
     <TextView
         android:id="@+id/tabt"
