--- a/app/src/main/res/layout/activity_nyt_spil.xml
+++ b/app/src/main/res/layout/activity_nyt_spil.xml
@@ -36,7 +36,7 @@
         android:layout_marginTop="25dp"
         android:ems="10"
         android:inputType="textShortMessage"
-        android:text="input"
+        android:text="indtast bogstav"
         app:layout_constraintStart_toStartOf="@+id/wordToGuess"
         app:layout_constraintTop_toBottomOf="@+id/wordToGuess" />
 
