--- a/app/src/main/res/layout/activity_nyt_spil.xml
+++ b/app/src/main/res/layout/activity_nyt_spil.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="22dp"
         android:ems="10"
         android:inputType="none"
-        android:text="Word"
+        android:text="Ord der gættes"
         app:layout_constraintStart_toStartOf="@+id/userName"
         app:layout_constraintTop_toBottomOf="@+id/userName" />
 
@@ -56,7 +56,7 @@
         android:layout_marginTop="11dp"
         android:ems="10"
         android:inputType="none"
-        android:text="Used letters"
+        android:text="Brugte bogstaver"
         app:layout_constraintStart_toStartOf="@+id/userInput"
         app:layout_constraintTop_toBottomOf="@+id/userInput" />
 
