--- a/app/src/main/res/layout/activity_choose_word_type.xml
+++ b/app/src/main/res/layout/activity_choose_word_type.xml
@@ -1,28 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:gravity="center_horizontal"
     tools:context=".Views.ChooseWordType">
 
-    <Button
-        android:id="@+id/sværtOrd"
-        android:layout_width="wrap_content"
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="340dp"
-        android:text="Svært"
-        app:layout_constraintStart_toEndOf="@+id/nemtOrd"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="150dp" />
 
-    <Button
-        android:id="@+id/nemtOrd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
-        android:text="Nemt"
-        app:layout_constraintBaseline_toBaselineOf="@+id/sværtOrd"
-        app:layout_constraintStart_toStartOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
