--- a/app/src/main/res/layout/activity_du_har_vundet.xml
+++ b/app/src/main/res/layout/activity_du_har_vundet.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".Views.DuHarVundet">
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:text="Se Highscore"
+        app:layout_constraintStart_toStartOf="@+id/vundet_return"
+        app:layout_constraintTop_toBottomOf="@+id/vundet_return" />
+
     <TextView
         android:id="@+id/vundet"
         android:layout_width="wrap_content"
