--- a/app/src/main/res/layout/my_row.xml
+++ b/app/src/main/res/layout/my_row.xml
@@ -16,28 +16,37 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="110dp">
+            android:layout_height="110dp"
+            app:layout_constraintBottom_toTopOf="@+id/username"
+            app:layout_constraintTop_toTopOf="@+id/username">
+
+            <TextView
+                android:id="@+id/ord"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="1dp"
+                android:text="TextView"
+                app:layout_constraintBaseline_toBaselineOf="@+id/score_ord"
+                app:layout_constraintStart_toStartOf="@+id/username" />
 
             <TextView
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginBottom="20dp"
                 android:text="Brugernavn"
                 android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/ord"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/score_ord"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="1dp"
-                android:layout_marginBottom="2dp"
+                android:layout_marginBottom="3dp"
                 android:text="Score og ord"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/username" />
+                app:layout_constraintStart_toEndOf="@+id/ord" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
