--- a/app/src/main/res/layout/my_row.xml
+++ b/app/src/main/res/layout/my_row.xml
@@ -25,7 +25,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="1dp"
-                android:text="TextView"
+                android:text="Ordet"
+                android:textStyle="bold"
                 app:layout_constraintBaseline_toBaselineOf="@+id/score_ord"
                 app:layout_constraintStart_toStartOf="@+id/username" />
 
