--- a/app/src/main/res/layout/my_row.xml
+++ b/app/src/main/res/layout/my_row.xml
@@ -16,36 +16,72 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="146dp"
             app:layout_constraintBottom_toTopOf="@+id/username"
             app:layout_constraintTop_toTopOf="@+id/username">
+
+            <TextView
+                android:id="@+id/ord2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="11dp"
+                android:text="Ord"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/ord"
+                app:layout_constraintStart_toStartOf="@+id/ord" />
 
             <TextView
                 android:id="@+id/ord"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="1dp"
+                android:layout_marginStart="29dp"
+                android:layout_marginBottom="9dp"
                 android:text="Ordet"
                 android:textStyle="bold"
-                app:layout_constraintBaseline_toBaselineOf="@+id/score_ord"
-                app:layout_constraintStart_toStartOf="@+id/username" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/username2" />
 
             <TextView
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="9dp"
                 android:text="Brugernavn"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toTopOf="@+id/ord"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/username2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="9dp"
+                android:text="Brugernavn"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/username"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/score_ord2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="Antal forsøg"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/score_ord"
+                app:layout_constraintStart_toStartOf="@+id/score_ord" />
 
             <TextView
                 android:id="@+id/score_ord"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginBottom="4dp"
+                android:layout_marginStart="28dp"
+                android:layout_marginBottom="10dp"
                 android:text="Score og ord"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ord" />
