--- a/app/src/main/res/layout/activity_du_har_vundet.xml
+++ b/app/src/main/res/layout/activity_du_har_vundet.xml
@@ -6,43 +6,63 @@
     android:layout_height="match_parent"
     tools:context=".Views.DuHarVundet">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationWin"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+
+        android:layout_marginBottom="13dp"
+        app:layout_constraintBottom_toTopOf="@+id/vundet"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/winner" />
+
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginBottom="225dp"
         android:text="Se Highscore"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/vundet_return"
         app:layout_constraintTop_toBottomOf="@+id/vundet_return" />
-
-    <TextView
-        android:id="@+id/vundet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
-        android:text="Du har vundet!"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/vundet_return"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="286dp"
+        android:layout_marginBottom="13dp"
         android:text="Tilbage til start"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ordetVarVundet" />
 
     <TextView
         android:id="@+id/ordetVarVundet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="11dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/vundet_return"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/vundet_return"
+        app:layout_constraintTop_toBottomOf="@+id/vundet" />
+
+    <TextView
+        android:id="@+id/vundet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="43dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginBottom="12dp"
+        android:text="Du har vundet!"
+        app:layout_constraintBottom_toTopOf="@+id/ordetVarVundet"
+        app:layout_constraintEnd_toEndOf="@+id/vundet_return"
+        app:layout_constraintStart_toStartOf="@+id/ordetVarVundet"
+        app:layout_constraintTop_toBottomOf="@+id/animationWin" />
 </androidx.constraintlayout.widget.ConstraintLayout>
